--- a/styles/main.css
+++ b/styles/main.css
@@ -31,11 +31,11 @@
   background: linear-gradient(90deg, #385159 0%, #062630 100%);
   cursor: pointer; }
 
-.hero__content {
+.hero__content, .introduction__content {
   display: grid;
   grid-template-columns: 1fr; }
 
-.primary, .alternate, .hero .content__reviews {
+.primary, .alternate, .hero .content__reviews, .introduction, .introduction__text, .introduction__list, .introduction__list--item {
   display: flex;
   justify-content: center;
   align-items: center; }
@@ -60,7 +60,7 @@ body {
 @media (min-width: 70em) and (max-width: 81.25em) {
   html {
     font-size: 56.25%; } }
-.hero .content__title, .primary, .alternate, .hero .content__btn, .hero .content__rating p {
+.hero .content__title, .introduction__title, .primary, .alternate, .hero .content__btn, .hero .content__rating p {
   font-size: 6.2rem;
   font-weight: 700;
   font-family: "Martian Mono";
@@ -70,12 +70,23 @@ body {
 .hero .content__title {
   font-size: 3.8rem; }
 
-.hero .content__description {
+.introduction__title {
+  font-size: 5rem;
+  font-weight: 600;
+  line-height: 1.3; }
+
+.introduction__title {
+  font-size: 3.4rem; }
+
+.introduction__description span, .hero .content__description, .introduction__list--item, .introduction__description {
   font-size: 2rem;
   font-family: "Inter";
   font-weight: 400;
   line-height: 1.4;
   letter-spacing: -0.5px; }
+
+.introduction__description span {
+  font-weight: 600; }
 
 .primary, .alternate, .hero .content__btn, .hero .content__rating p {
   font-size: 1.8rem;
@@ -179,184 +190,47 @@ body {
       grid-template-columns: 1fr 54rem;
       column-gap: 6.4rem;
       align-items: center; } }
-/* .hero { */
-/*   background-image: url("../assets/images/pattern-light-bg.svg"); */
-/*   background-color: $color-neutral-100; */
-/*   width: 100%; */
-/*   height: auto; */
-/*   padding: $spacing-32 13.5rem $spacing-80; */
-/*   position: relative; */
-/*   overflow: hidden; */
-/*   z-index: 10; */
-/**/
-/*   @extend %flexbox-style; */
-/**/
-/*   flex-direction: column; */
-/*   align-items: flex-start; */
-/*   gap: $spacing-80; */
-/**/
-/*   &::after { */
-/*     @include blur-effect(50%, -30%); */
-/*   } */
-/**/
-/*   &__content { */
-/*     @extend %grid-container; */
-/**/
-/*     grid-template-columns: 1fr 54rem; */
-/*     column-gap: $spacing-64; */
-/**/
-/*     &-title { */
-/*       @extend %text-preset-1; */
-/**/
-/*       background: $color-gradient-text-gradient; */
-/*       -webkit-background-clip: text; */
-/*       background-clip: text; */
-/*       -webkit-text-fill-color: transparent; */
-/*       margin-bottom: $spacing-24sf; */
-/*     } */
-/**/
-/*     &-description { */
-/*       @extend %text-preset-5; */
-/**/
-/*       color: $color-neutral-700; */
-/*       margin-bottom: $spacing-32; */
-/*     } */
-/**/
-/*     &-btn { */
-/*       margin-bottom: $spacing-20; */
-/*     } */
-/**/
-/*     &-reviews { */
-/*       @extend %flexbox-style; */
-/**/
-/*       justify-content: start; */
-/*       align-items: center; */
-/*       gap: $spacing-12; */
-/*     } */
-/**/
-/*     &-avatars { */
-/*       max-width: 11rem; */
-/*     } */
-/**/
-/*     &-rating { */
-/*       img { */
-/*         width: 2.4rem; */
-/*         height: 2.4rem; */
-/*         margin-bottom: $spacing-4; */
-/*       } */
-/**/
-/*       p { */
-/*         @extend %text-preset-7; */
-/**/
-/*         color: $color-neutral-700; */
-/*       } */
-/*     } */
-/**/
-/*     &-image { */
-/*       width: 100%; */
-/*       height: 100%; */
-/*       border-radius: $border-radius-10; */
-/*     } */
-/*   } */
-/* } */
-/**/
-/* @include respond-to($breakpoint-small-mobiles) { */
-/*   .hero { */
-/*     padding: $spacing-24 $spacing-16 $spacing-80; */
-/*     gap: $spacing-48; */
-/**/
-/*     &::after { */
-/*       @include blur-effect(100%, 100%); */
-/*     } */
-/**/
-/*     &__content { */
-/*       grid-template-columns: 1fr; */
-/*       row-gap: $spacing-64; */
-/**/
-/*       &-title { */
-/*         font-size: 3.8rem; */
-/*       } */
-/**/
-/*       &-description { */
-/*         letter-spacing: -0.2px; */
-/*       } */
-/**/
-/*       &-btn { */
-/*         font-size: calc(1.2rem + 0.2vw); */
-/*       } */
-/*     } */
-/*   } */
-/* } */
-/**/
-/* @include respond-to($breakpoint-large-mobiles) { */
-/*   .hero { */
-/*     padding: $spacing-32 $spacing-32 $spacing-48; */
-/*     gap: $spacing-48; */
-/**/
-/*     &::after { */
-/*       @include blur-effect(76%, -50%); */
-/*     } */
-/**/
-/*     &__content { */
-/*       grid-template-columns: 1fr; */
-/*       row-gap: $spacing-64; */
-/*     } */
-/*   } */
-/* } */
-/**/
-/* @media (min-width: 48em) and (max-width: 79.063em) { */
-/*   .hero { */
-/*     gap: $spacing-64; */
-/**/
-/*     &__content { */
-/*       &-title { */
-/*         letter-spacing: -1px; */
-/*       } */
-/**/
-/*       &-description { */
-/*         letter-spacing: -0.2px; */
-/*       } */
-/*     } */
-/*   } */
-/* } */
-/**/
-/* @include respond-to($breakpoint-tablets) { */
-/*   .hero { */
-/*     padding: $spacing-32 $spacing-32 $spacing-80; */
-/**/
-/*     &::after { */
-/*       @include blur-effect(73%, -50%); */
-/*     } */
-/**/
-/*     &__content { */
-/*       grid-template-columns: 1fr; */
-/*       row-gap: $spacing-64; */
-/*     } */
-/*   } */
-/* } */
-/**/
-/* @include respond-to($breakpoint-large-tablets) { */
-/*   .hero { */
-/*     &__content { */
-/*       grid-template-columns: repeat(2, 1fr); */
-/*       align-items: stretch; */
-/**/
-/*       &-info { */
-/*         align-self: center; */
-/*       } */
-/**/
-/*       &-title { */
-/*         font-size: 5.4rem; */
-/*       } */
-/*     } */
-/**/
-/*     padding: $spacing-64 $spacing-48; */
-/**/
-/*     &::after { */
-/*       @include blur-effect(50%, -30%); */
-/*     } */
-/*   } */
-/* } */
+.introduction {
+  gap: 6.4rem;
+  padding: 0 1.6rem;
+  margin-bottom: 6.4rem; }
+  .introduction, .introduction__text, .introduction__list, .introduction__list--item {
+    flex-direction: column;
+    align-items: baseline; }
+  .introduction__content {
+    row-gap: 4rem; }
+  .introduction__text {
+    gap: 2.4rem; }
+  .introduction__list {
+    gap: 1.6rem; }
+    .introduction__list--item {
+      flex-direction: row;
+      align-items: center;
+      list-style: none;
+      gap: 1.4rem; }
+  .introduction__title {
+    color: #062630; }
+    .introduction__title div {
+      display: inline-block;
+      position: relative;
+      z-index: 1; }
+      .introduction__title div img {
+        max-width: 11rem;
+        min-height: auto;
+        display: inline;
+        position: absolute;
+        top: 0;
+        left: -1.7rem; }
+  .introduction__logos {
+    display: none; }
+  .introduction__description {
+    color: #385159; }
+  .introduction__image img {
+    display: block;
+    width: 100%;
+    height: auto;
+    border-radius: 1.2rem; }
+
 /* .introduction { */
 /*     @extend %flexbox-style; */
 /**/
