--- a/styles/layout/_journey.scss
+++ b/styles/layout/_journey.scss
@@ -1,3 +1,50 @@
+.journey {
+  &,
+  &__step {
+    @extend %flexbox-style;
+    flex-direction: column;
+    gap: $spacing-24;
+  }
+
+  margin: 0 $spacing-16 $spacing-64;
+  padding: $spacing-32 $spacing-16;
+  background-color: $color-neutral-100;
+  background-image: url("../../assets/images/pattern-light-bg.svg");
+  border-radius: $border-radius-12;
+  text-align: center;
+
+  &__title {
+    @extend %text-preset-2-mobile;
+  }
+
+  &__steps {
+    @extend %grid-container;
+    row-gap: $spacing-16;
+  }
+
+  &__step {
+    @extend %text-preset-4-regular;
+    &--number {
+      span {
+        display: inline-block;
+        width: 4rem;
+        height: 4rem;
+        box-shadow: inset 0 0 0 2px $color-neutral-900;
+        border-radius: $border-radius-4;
+        padding: 0.6rem 0.8rem;
+      }
+      img {
+        display: none;
+      }
+    }
+    p {
+      @extend %text-preset-4;
+      font-size: 2rem;
+      line-height: 1.4;
+    }
+  }
+}
+
 /* .journey { */
 /*   margin: 0 13.5rem 12rem; */
 /*   background-image: url("../assets/images/pattern-light-bg.svg"); */
