--- a/styles/main.css
+++ b/styles/main.css
@@ -31,11 +31,11 @@
   background: linear-gradient(90deg, #385159 0%, #062630 100%);
   cursor: pointer; }
 
-.hero__content, .introduction__content {
+.hero__content, .introduction__content, .journey__steps {
   display: grid;
   grid-template-columns: 1fr; }
 
-.primary, .alternate, .hero .content__reviews, .introduction, .introduction__text, .introduction__list, .introduction__list--item {
+.primary, .alternate, .hero .content__reviews, .introduction, .introduction__text, .introduction__list, .introduction__list--item, .journey, .journey__step {
   display: flex;
   justify-content: center;
   align-items: center; }
@@ -60,7 +60,7 @@ body {
 @media (min-width: 70em) and (max-width: 84.375em) {
   html {
     font-size: 56.25%; } }
-.hero .content__title, .introduction__title, .primary, .alternate, .hero .content__btn, .hero .content__rating p {
+.hero .content__title, .journey__step, .journey__step p, .introduction__title, .journey__title, .primary, .alternate, .hero .content__btn, .hero .content__rating p {
   font-size: 6.2rem;
   font-weight: 700;
   font-family: "Martian Mono";
@@ -70,13 +70,24 @@ body {
 .hero .content__title {
   font-size: 3.8rem; }
 
-.introduction__title {
+.journey__step, .journey__step p, .introduction__title, .journey__title {
   font-size: 5rem;
   font-weight: 600;
   line-height: 1.3; }
 
-.introduction__title {
+.journey__step, .journey__step p, .introduction__title, .journey__title {
   font-size: 3.4rem; }
+
+.journey__step, .journey__step p {
+  letter-spacing: -1px; }
+
+.journey__step, .journey__step p {
+  font-size: 2.4rem;
+  line-height: 1.1; }
+
+.journey__step {
+  font-weight: 400;
+  line-height: 1.2; }
 
 .introduction__description span, .hero .content__description, .introduction__list--item, .introduction__description {
   font-size: 2rem;
@@ -277,249 +288,31 @@ body {
       left: 50%;
       transform: translateX(-45%);
       bottom: 3.1rem; } }
-/* .introduction { */
-/*     @extend %flexbox-style; */
-/**/
-/*     flex-direction: column; */
-/*     gap: 12rem; */
-/*     padding: 12rem 13.5rem; */
-/**/
-/*     &__content { */
-/*         @extend %grid-container; */
-/**/
-/*         grid-template-columns: 1fr 1fr; */
-/*         column-gap: $spacing-80; */
-/*         position: relative; */
-/*     } */
-/**/
-/*     &__image { */
-/*         max-width: 100%; */
-/*         border-radius: 2rem; */
-/*     } */
-/**/
-/*     &__text { */
-/*         h2 { */
-/*             margin-bottom: 3.4rem; */
-/*         } */
-/**/
-/*         h3 { */
-/*             margin-bottom: 2.4rem; */
-/*         } */
-/*     } */
-/**/
-/*     &__title { */
-/*         @extend %text-preset-2; */
-/**/
-/*         color: $color-neutral-900; */
-/**/
-/*         div { */
-/*             display: inline-block; */
-/*             position: relative; */
-/*             z-index: 1; */
-/**/
-/*             img { */
-/*                 width: 16rem; */
-/*                 height: 6rem; */
-/*                 display: inline; */
-/*                 position: absolute; */
-/*                 top: 0; */
-/*                 left: -1.7rem; */
-/*             } */
-/*         } */
-/*     } */
-/**/
-/*     &__list { */
-/*         @extend %flexbox-style; */
-/**/
-/*         flex-direction: column; */
-/*         align-items: baseline; */
-/*         gap: $spacing-24; */
-/*         list-style: none; */
-/**/
-/*         &--item { */
-/*             @extend %text-preset-5; */
-/**/
-/*             @extend %flexbox-style; */
-/**/
-/*             gap: 1.4rem; */
-/*             color: $color-neutral-700; */
-/*             max-width: 43.1rem; */
-/*         } */
-/*     } */
-/**/
-/*     &__description { */
-/*         @extend %text-preset-5; */
-/**/
-/*         color: $color-neutral-700; */
-/*         max-width: 52rem; */
-/**/
-/*         span { */
-/*             @extend %text-preset-5-semibold; */
-/*         } */
-/*     } */
-/**/
-/*     &__logos { */
-/*         position: absolute; */
-/*         bottom: 2rem; */
-/*         left: 49%; */
-/*         transform: translateX(-24%); */
-/*     } */
-/* } */
-/**/
-/* @include respond-to($breakpoint-small-mobiles) { */
-/*     .introduction { */
-/*         padding: $spacing-64 $spacing-16; */
-/*         gap: $spacing-64; */
-/**/
-/*         &__content { */
-/*             grid-template-columns: 1fr; */
-/*             row-gap: 4rem; */
-/**/
-/*             &:nth-child(1) div { */
-/*                 grid-row: 1 / 2; */
-/*             } */
-/*         } */
-/**/
-/*         &__title { */
-/*             font-size: 3.4rem; */
-/**/
-/*             div { */
-/*                 img { */
-/*                     width: 11rem; */
-/*                     height: auto; */
-/*                 } */
-/*             } */
-/*         } */
-/**/
-/*         &__description { */
-/*             max-width: 34rem; */
-/*         } */
-/**/
-/*         h2, h3 { */
-/*             margin-bottom: $spacing-24; */
-/*         } */
-/**/
-/*         &__image { */
-/*             max-width: 100%; */
-/*         } */
-/**/
-/*         &__list { */
-/*             gap: $spacing-16; */
-/*         } */
-/**/
-/*         &__logos { */
-/*             display: none; */
-/*         } */
-/*     } */
-/* } */
-/**/
-/**/
-/* @include respond-to($breakpoint-large-mobiles) { */
-/*     .introduction { */
-/*         padding: $spacing-32 $spacing-32 $spacing-48; */
-/*         gap: $spacing-48; */
-/**/
-/*         &__content { */
-/*             grid-template-columns: 1fr; */
-/*             row-gap: $spacing-64; */
-/**/
-/*             &:nth-child(1) div { */
-/*                 grid-row: 1 / 2; */
-/*             } */
-/*         } */
-/**/
-/*         &__image { */
-/*             max-width: 100%; */
-/*         } */
-/**/
-/*         &__list { */
-/*             &--item { */
-/*                 max-width: 100%; */
-/*             } */
-/*         } */
-/**/
-/*         &__description { */
-/*             max-width: 100%; */
-/*         } */
-/**/
-/*         &__logos { */
-/*             display: none; */
-/*         } */
-/*     } */
-/* } */
-/**/
-/**/
-/* @include respond-to($breakpoint-tablets) { */
-/*     .introduction { */
-/*         padding: $spacing-80 $spacing-32; */
-/*         gap: $spacing-80; */
-/**/
-/*         &__content { */
-/*             grid-template-columns: 1fr; */
-/*             row-gap: 4rem; */
-/**/
-/*             &:nth-child(1) div { */
-/*                 grid-row: 1 / 2; */
-/*             } */
-/*         } */
-/**/
-/*         &__image { */
-/*             max-width: 100%; */
-/*         } */
-/**/
-/*         &__title { */
-/*             max-width: calc(100vw - 9.6rem); */
-/*         } */
-/**/
-/*         &__list { */
-/*             &--item { */
-/*                 max-width: 100%; */
-/*             } */
-/*         } */
-/**/
-/*         &__description { */
-/*             max-width: 100%; */
-/*         } */
-/**/
-/*         &__logos { */
-/*             position: absolute; */
-/*             bottom: 4rem; */
-/*             right: 4rem; */
-/*             transform: translateX(0); */
-/*             left: auto; */
-/*         } */
-/*     } */
-/* } */
-/**/
-/**/
-/* @include respond-to($breakpoint-large-tablets) { */
-/*     .introduction { */
-/*         padding: $spacing-64 $spacing-48; */
-/*         gap: $spacing-64; */
-/**/
-/*         &__content { */
-/*             grid-template-columns: 1fr 1fr; */
-/*             row-gap: $spacing-64; */
-/*         } */
-/**/
-/*         &__list { */
-/*             &--item { */
-/*                 max-width: 100%; */
-/*             } */
-/*         } */
-/*     } */
-/* } */
-/**/
-/**/
-/* //* HACK  (1266px ~ 1371px) */
-/* @media (min-width: 79.125em) and (max-width: 85.69em) { */
-/*     .introduction { */
-/*         &__content { */
-/*             grid-template-columns: 1fr 1fr; */
-/*             column-gap: $spacing-64; */
-/*         } */
-/*     } */
-/* } */
+.journey {
+  margin: 0 1.6rem 6.4rem;
+  padding: 3.2rem 1.6rem;
+  background-color: #faf5f3;
+  background-image: url("../../assets/images/pattern-light-bg.svg");
+  border-radius: 1.2rem;
+  text-align: center; }
+  .journey, .journey__step {
+    flex-direction: column;
+    gap: 2.4rem; }
+  .journey__steps {
+    row-gap: 1.6rem; }
+  .journey__step--number span {
+    display: inline-block;
+    width: 4rem;
+    height: 4rem;
+    box-shadow: inset 0 0 0 2px #062630;
+    border-radius: 0.4rem;
+    padding: 0.6rem 0.8rem; }
+  .journey__step--number img {
+    display: none; }
+  .journey__step p {
+    font-size: 2rem;
+    line-height: 1.4; }
+
 /* .journey { */
 /*   margin: 0 13.5rem 12rem; */
 /*   background-image: url("../assets/images/pattern-light-bg.svg"); */
