--- a/styles/main.css
+++ b/styles/main.css
@@ -294,12 +294,15 @@ body {
   background-color: #faf5f3;
   background-image: url("../../assets/images/pattern-light-bg.svg");
   border-radius: 1.2rem;
-  text-align: center; }
+  text-align: center;
+  position: relative;
+  z-index: 10;
+  overflow: hidden; }
   .journey, .journey__step {
     flex-direction: column;
     gap: 2.4rem; }
   .journey__steps {
-    row-gap: 1.6rem; }
+    row-gap: 2.4rem; }
   .journey__step--number span {
     display: inline-block;
     width: 4rem;
@@ -313,6 +316,29 @@ body {
     font-size: 2rem;
     line-height: 1.4; }
 
+@media (min-width: 48em) {
+  .journey {
+    margin: 0 3.2rem 8rem;
+    padding: 4.8rem 2.4rem;
+    gap: 4rem; }
+    .journey::after {
+      content: "";
+      position: absolute;
+      top: 75%;
+      right: -47%;
+      background-color: #9cc9da;
+      filter: blur(20rem);
+      width: 68.4rem;
+      height: 68.4rem;
+      border-radius: 50%;
+      pointer-events: none;
+      z-index: -1; }
+    .journey__title {
+      font-size: 5rem; }
+    .journey__steps {
+      grid-template-columns: repeat(2, 1fr);
+      gap: 3.2rem;
+      align-items: baseline; } }
 /* .journey { */
 /*   margin: 0 13.5rem 12rem; */
 /*   background-image: url("../assets/images/pattern-light-bg.svg"); */
