Complete journey section renewal desktop versions

--- a/styles/main.css
+++ b/styles/main.css
@@ -31,11 +31,12 @@
   background: linear-gradient(90deg, #385159 0%, #062630 100%);
   cursor: pointer; }
 
-.hero__content, .introduction__content, .journey__steps {
+.hero__content, .introduction__content, .journey, .journey__steps {
   display: grid;
   grid-template-columns: 1fr; }
 
-.primary, .alternate, .hero .content__reviews, .introduction, .introduction__text, .introduction__list, .introduction__list--item, .journey, .journey__step {
+.primary, .alternate, .hero .content__reviews, .introduction, .introduction__text, .introduction__list, .introduction__list--item, .journey__step--number,
+.journey span {
   display: flex;
   justify-content: center;
   align-items: center; }
@@ -167,7 +168,7 @@ body {
       position: absolute;
       top: 75%;
       right: -47%;
-      background-color: #9cc9da;
+      background-color: rgba(156, 201, 218, 0.4);
       filter: blur(20rem);
       width: 68.4rem;
       height: 68.4rem;
@@ -191,7 +192,7 @@ body {
       position: absolute;
       top: 45%;
       right: -32.5%;
-      background-color: #9cc9da;
+      background-color: rgba(156, 201, 218, 0.4);
       filter: blur(20rem);
       width: 68.4rem;
       height: 68.4rem;
@@ -298,20 +299,22 @@ body {
   position: relative;
   z-index: 10;
   overflow: hidden; }
-  .journey, .journey__step {
+  .journey__step--number,
+  .journey span {
     flex-direction: column;
     gap: 2.4rem; }
-  .journey__steps {
+  .journey, .journey__steps {
     row-gap: 2.4rem; }
-  .journey__step--number span {
-    display: inline-block;
-    width: 4rem;
-    height: 4rem;
-    box-shadow: inset 0 0 0 2px #062630;
-    border-radius: 0.4rem;
-    padding: 0.6rem 0.8rem; }
-  .journey__step--number img {
-    display: none; }
+  .journey__step--number {
+    flex-direction: row;
+    margin-bottom: 2.4rem; }
+    .journey__step--number span {
+      width: 4rem;
+      height: 4rem;
+      box-shadow: inset 0 0 0 2px #062630;
+      border-radius: 0.4rem; }
+    .journey__step--number img {
+      display: none; }
   .journey__step p {
     font-size: 2rem;
     line-height: 1.4; }
@@ -320,13 +323,13 @@ body {
   .journey {
     margin: 0 3.2rem 8rem;
     padding: 4.8rem 2.4rem;
-    gap: 4rem; }
+    row-gap: 4rem; }
     .journey::after {
       content: "";
       position: absolute;
       top: 75%;
       right: -47%;
-      background-color: #9cc9da;
+      background-color: rgba(156, 201, 218, 0.4);
       filter: blur(20rem);
       width: 68.4rem;
       height: 68.4rem;
@@ -339,183 +342,36 @@ body {
       grid-template-columns: repeat(2, 1fr);
       gap: 3.2rem;
       align-items: baseline; } }
-/* .journey { */
-/*   margin: 0 13.5rem 12rem; */
-/*   background-image: url("../assets/images/pattern-light-bg.svg"); */
-/*   background-color: $color-neutral-100; */
-/*   padding: $spacing-80 0; */
-/*   position: relative; */
-/*   z-index: 10; */
-/*   overflow: hidden; */
-/*   border-radius: $border-radius-12; */
-/**/
-/*   @extend %flexbox-style; */
-/**/
-/*   flex-direction: column; */
-/*   gap: $spacing-64; */
-/**/
-/*   &::after { */
-/*     @include blur-effect(32%, -28%); */
-/*   } */
-/**/
-/*   header { */
-/*     max-width: 51.2rem; */
-/*     text-align: center; */
-/*   } */
-/**/
-/*   &__title { */
-/*     @extend %text-preset-2; */
-/**/
-/*     line-height: 1.2; */
-/*     letter-spacing: -0.4rem; */
-/*   } */
-/**/
-/*   &__steps { */
-/*     @extend %grid-container; */
-/**/
-/*     grid-template-columns: repeat(4, 22.6rem); */
-/*     column-gap: $spacing-48; */
-/*   } */
-/**/
-/*   &__step { */
-/*     @extend %text-preset-4-regular; */
-/**/
-/*     &--number { */
-/*       span, */
-/*       img { */
-/*         display: inline-block; */
-/*       } */
-/**/
-/*       span { */
-/*         line-height: 1; */
-/*         color: $color-neutral-900; */
-/*         box-shadow: inset 0 0 0 2px $color-neutral-900; */
-/*         width: 4rem; */
-/*         height: 4rem; */
-/*         border-radius: $border-radius-4; */
-/*         text-align: center; */
-/*         padding: 0.8rem 0.4rem; */
-/*       } */
-/**/
-/*       @extend %flexbox-style; */
-/**/
-/*       max-width: 100%; */
-/*       justify-content: space-between; */
-/*       margin-bottom: $spacing-24; */
-/*     } */
-/**/
-/*     p { */
-/*       @extend %text-preset-6; */
-/*     } */
-/*   } */
-/* } */
-/**/
-/* @include respond-to($breakpoint-small-mobiles) { */
-/*   .journey { */
-/*     margin: 0 $spacing-16 $spacing-64; */
-/*     padding: $spacing-48 $spacing-32; */
-/*     gap: $spacing-48; */
-/**/
-/*     &::after { */
-/*       @include blur-effect(100%, 100%); */
-/*     } */
-/**/
-/*     header { */
-/*       max-width: 100%; */
-/*     } */
-/**/
-/*     &__title { */
-/*       font-size: 3.8rem; */
-/*       letter-spacing: -0.2rem; */
-/*     } */
-/**/
-/*     &__steps { */
-/*       grid-template-columns: 1fr; */
-/*       row-gap: $spacing-32; */
-/*     } */
-/**/
-/*     &__step { */
-/*       justify-items: center; */
-/**/
-/*       p { */
-/*         justify-self: start; */
-/*       } */
-/**/
-/*       &--number { */
-/*         img { */
-/*           display: none; */
-/*         } */
-/*       } */
-/*     } */
-/*   } */
-/* } */
-/**/
-/* @include respond-to($breakpoint-large-mobiles) { */
-/*   .journey { */
-/*     margin: $spacing-32 $spacing-24; */
-/*     padding: $spacing-32 $spacing-24; */
-/*     gap: $spacing-48; */
-/**/
-/*     &::after { */
-/*       @include blur-effect(100%, 100%); */
-/*     } */
-/**/
-/*     header { */
-/*       max-width: 100%; */
-/*     } */
-/**/
-/*     &__title { */
-/*       font-size: 4.2rem; */
-/*       letter-spacing: -0.2rem; */
-/*     } */
-/**/
-/*     &__steps { */
-/*       grid-template-columns: 1fr 1fr; */
-/*       gap: $spacing-32; */
-/*     } */
-/**/
-/*     &__step { */
-/*       p { */
-/*         font-size: 1.6rem; */
-/*       } */
-/*     } */
-/*   } */
-/* } */
-/**/
-/* @include respond-to($breakpoint-tablets) { */
-/*   .journey { */
-/*     margin: $spacing-32 $spacing-32 $spacing-80; */
-/*     padding: $spacing-48 $spacing-32; */
-/*     gap: $spacing-48; */
-/**/
-/*     &::after { */
-/*       @include blur-effect(53%, -33%); */
-/*     } */
-/**/
-/*     &__steps { */
-/*       grid-template-columns: repeat(2, 1fr); */
-/*       column-gap: $spacing-64; */
-/*       row-gap: $spacing-48; */
-/*     } */
-/*   } */
-/* } */
-/**/
-/* @include respond-to($breakpoint-large-tablets) { */
-/*   .journey { */
-/*     margin: $spacing-64 $spacing-48 $spacing-80; */
-/*     padding: $spacing-64 $spacing-48; */
-/**/
-/*     &::after { */
-/*       @include blur-effect(50%, -33%); */
-/*     } */
-/**/
-/*     &__steps { */
-/*       grid-template-columns: repeat(3, 1fr); */
-/*       column-gap: $spacing-80; */
-/*       row-gap: $spacing-64; */
-/*     } */
-/*   } */
-/* } */
+@media (min-width: 75em) {
+  .journey {
+    margin: 0 13.5rem 12rem;
+    padding: 8rem 6rem;
+    row-gap: 6.4rem; }
+    .journey::after {
+      content: "";
+      position: absolute;
+      top: 34%;
+      right: -27.5%;
+      background-color: rgba(156, 201, 218, 0.4);
+      filter: blur(20rem);
+      width: 68.4rem;
+      height: 68.4rem;
+      border-radius: 50%;
+      pointer-events: none;
+      z-index: -1; }
+    .journey__steps {
+      grid-template-columns: repeat(4, 1fr);
+      gap: 0;
+      column-gap: 4.8rem;
+      text-align: left; }
+    .journey__step--number {
+      justify-content: space-between;
+      width: 100%; }
+      .journey__step--number img {
+        display: block; }
+    .journey__step p {
+      font-size: 1.8rem;
+      line-height: 1.3; } }
 /* .pricing { */
 /*   max-width: 97rem; */
 /*   margin: 0 auto 12rem; */
