--- a/styles/main.css
+++ b/styles/main.css
@@ -31,12 +31,12 @@
   background: linear-gradient(90deg, #385159 0%, #062630 100%);
   cursor: pointer; }
 
-.hero__content, .introduction__content, .journey, .journey__steps {
+.hero__content, .introduction__content, .journey, .journey__steps, .pricing__options {
   display: grid;
   grid-template-columns: 1fr; }
 
 .primary, .alternate, .hero .content__reviews, .introduction, .introduction__text, .introduction__list, .introduction__list--item, .journey__step--number,
-.journey span {
+.journey span, .pricing, .pricing__option, .pricing__option--list-item {
   display: flex;
   justify-content: center;
   align-items: center; }
@@ -61,7 +61,7 @@ body {
 @media (min-width: 70em) and (max-width: 84.375em) {
   html {
     font-size: 56.25%; } }
-.hero .content__title, .journey__step, .journey__step p, .introduction__title, .journey__title, .primary, .alternate, .hero .content__btn, .hero .content__rating p {
+.hero .content__title, .journey__step, .journey__step p, .pricing__option--title, .pricing__option--price, .introduction__title, .journey__title, .pricing__header, .primary, .alternate, .hero .content__btn, .hero .content__rating p {
   font-size: 6.2rem;
   font-weight: 700;
   font-family: "Martian Mono";
@@ -71,18 +71,18 @@ body {
 .hero .content__title {
   font-size: 3.8rem; }
 
-.journey__step, .journey__step p, .introduction__title, .journey__title {
+.journey__step, .journey__step p, .pricing__option--title, .pricing__option--price, .introduction__title, .journey__title, .pricing__header {
   font-size: 5rem;
   font-weight: 600;
   line-height: 1.3; }
 
-.journey__step, .journey__step p, .introduction__title, .journey__title {
+.journey__step, .journey__step p, .pricing__option--title, .pricing__option--price, .introduction__title, .journey__title, .pricing__header {
   font-size: 3.4rem; }
 
-.journey__step, .journey__step p {
+.journey__step, .journey__step p, .pricing__option--title, .pricing__option--price {
   letter-spacing: -1px; }
 
-.journey__step, .journey__step p {
+.journey__step, .journey__step p, .pricing__option--title {
   font-size: 2.4rem;
   line-height: 1.1; }
 
@@ -90,7 +90,7 @@ body {
   font-weight: 400;
   line-height: 1.2; }
 
-.introduction__description span, .hero .content__description, .introduction__list--item, .introduction__description {
+.introduction__description span, .hero .content__description, .introduction__list--item, .introduction__description, .pricing__option--price span, .pricing__option--list-item {
   font-size: 2rem;
   font-family: "Inter";
   font-weight: 400;
@@ -374,6 +374,42 @@ body {
     .journey__step p {
       font-size: 1.8rem;
       line-height: 1.3; } }
+.pricing {
+  padding: 0 1.6rem;
+  margin-bottom: 6.4rem;
+  color: #062630; }
+  .pricing, .pricing__option, .pricing__option--list-item {
+    flex-direction: column;
+    gap: 2.4rem;
+    align-items: unset; }
+  .pricing__options {
+    grid-template-columns: repeat(auto-fit, minmax(34rem, 1fr));
+    row-gap: 2.4rem; }
+  .pricing__option {
+    padding: 2.4rem;
+    box-shadow: inset 0 0 0 1px #e6e1df;
+    border-radius: 0.8rem; }
+    .pricing__option--pro {
+      background-color: #faf5f3;
+      background-image: url("../../assets/images/pattern-glow.svg");
+      width: 100%;
+      height: 100%; }
+    .pricing__option--price span {
+      color: #385159;
+      margin-left: 0.8rem; }
+    .pricing__option--list {
+      list-style: none; }
+      .pricing__option--list-item {
+        color: #385159;
+        flex-direction: row;
+        justify-content: flex-start;
+        gap: 1.2rem; }
+        .pricing__option--list-item:first-of-type {
+          margin-bottom: 1.6rem; }
+  .pricing hr {
+    width: 100%;
+    border: 1px solid #e6e1df; }
+
 /* .pricing { */
 /*   max-width: 97rem; */
 /*   margin: 0 auto 12rem; */
@@ -524,7 +560,7 @@ body {
 /* } */
 /**/
 /* @include respond-to($breakpoint-tablets) { */
-/*   .pricing { */
+/*   .pricing{ */
 /*     margin: 0 auto $spacing-80; */
 /*     padding: 0 $spacing-32; */
 /*     gap: 4rem; */
