--- a/styles/main.css
+++ b/styles/main.css
@@ -36,7 +36,7 @@
   grid-template-columns: 1fr; }
 
 .primary, .alternate, .hero .content__reviews, .introduction, .introduction__text, .introduction__list, .introduction__list--item, .journey__step--number,
-.journey span, .pricing, .pricing__option, .pricing__option--list-item {
+.journey span, .pricing, .pricing__option, .pricing__option--list-item, .review {
   display: flex;
   justify-content: center;
   align-items: center; }
@@ -61,7 +61,7 @@ body {
 @media (min-width: 70em) and (max-width: 84.375em) {
   html {
     font-size: 56.25%; } }
-.hero .content__title, .journey__step, .journey__step p, .pricing__option--title, .pricing__option--price, .introduction__title, .journey__title, .pricing__header, .primary, .alternate, .hero .content__btn, .hero .content__rating p {
+.hero .content__title, .journey__step, .journey__step p, .pricing__option--title, .review__description, .pricing__option--price, .introduction__title, .journey__title, .pricing__header, .primary, .alternate, .hero .content__btn, .hero .content__rating p {
   font-size: 6.2rem;
   font-weight: 700;
   font-family: "Martian Mono";
@@ -71,18 +71,18 @@ body {
 .hero .content__title {
   font-size: 3.8rem; }
 
-.journey__step, .journey__step p, .pricing__option--title, .pricing__option--price, .introduction__title, .journey__title, .pricing__header {
+.journey__step, .journey__step p, .pricing__option--title, .review__description, .pricing__option--price, .introduction__title, .journey__title, .pricing__header {
   font-size: 5rem;
   font-weight: 600;
   line-height: 1.3; }
 
-.journey__step, .journey__step p, .pricing__option--title, .pricing__option--price, .introduction__title, .journey__title, .pricing__header {
+.journey__step, .journey__step p, .pricing__option--title, .review__description, .pricing__option--price, .introduction__title, .journey__title, .pricing__header {
   font-size: 3.4rem; }
 
-.journey__step, .journey__step p, .pricing__option--title, .pricing__option--price {
+.journey__step, .journey__step p, .pricing__option--title, .review__description, .pricing__option--price {
   letter-spacing: -1px; }
 
-.journey__step, .journey__step p, .pricing__option--title {
+.journey__step, .journey__step p, .pricing__option--title, .review__description {
   font-size: 2.4rem;
   line-height: 1.1; }
 
@@ -90,7 +90,7 @@ body {
   font-weight: 400;
   line-height: 1.2; }
 
-.introduction__description span, .hero .content__description, .introduction__list--item, .introduction__description, .pricing__option--price span, .pricing__option--list-item {
+.introduction__description span, .hero .content__description, .introduction__list--item, .introduction__description, .pricing__option--price span, .pricing__option--list-item, .review__author {
   font-size: 2rem;
   font-family: "Inter";
   font-weight: 400;
@@ -434,243 +434,73 @@ body {
       height: auto; }
     .pricing__option--pro {
       height: 100%; } }
-/* .pricing { */
-/*   max-width: 97rem; */
-/*   margin: 0 auto 12rem; */
-/**/
+.review {
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 3.2rem;
+  padding: 0 1.6rem;
+  margin-bottom: 6.4rem; }
+  .review__author {
+    color: #385159; }
+
+/* .review { */
 /*   @extend %flexbox-style; */
 /**/
+/*   max-width: 97rem; */
+/*   margin: 0 auto 12rem; */
 /*   flex-direction: column; */
-/*   gap: $spacing-64; */
+/*   gap: $spacing-32; */
 /**/
-/*   &__header { */
-/*     @extend %text-preset-2; */
+/*   &__description { */
+/*     @extend %text-preset-3; */
 /**/
 /*     color: $color-neutral-900; */
+/*     text-align: center; */
 /*   } */
 /**/
-/*   &__options { */
-/*     @extend %grid-container; */
+/*   &__author { */
+/*     @extend %text-preset-5; */
 /**/
-/*     grid-template-columns: 28.6rem 35rem 28.6rem; */
-/*     column-gap: $spacing-24; */
-/*   } */
-/**/
-/*   &__option { */
-/*     @extend %flexbox-style; */
-/**/
-/*     flex-direction: column; */
-/*     align-items: baseline; */
-/*     box-shadow: inset 0 0 0 1px $color-neutral-200; */
-/*     border-radius: $border-radius-8; */
-/*     gap: 2.4rem; */
-/*     position: relative; */
-/*     overflow: hidden; */
-/*     z-index: 10; */
-/**/
-/*     &:nth-child(2) { */
-/*       background-color: $color-neutral-100; */
-/*       z-index: 1; */
-/**/
-/*       &::after { */
-/*         @include blur-effect(49%, -105%); */
-/*       } */
-/*     } */
-/**/
-/*     &--starter, */
-/*     &--enterprise { */
-/*       padding: $spacing-24; */
-/*     } */
-/**/
-/*     &--pro { */
-/*       padding: 4rem $spacing-24; */
-/*     } */
-/**/
-/*     &--title { */
-/*       @extend %text-preset-4; */
-/**/
-/*       color: $color-neutral-900; */
-/*     } */
-/**/
-/*     &--price { */
-/*       @extend %text-preset-3; */
-/**/
-/*       color: $color-neutral-900; */
-/**/
-/*       span { */
-/*         @extend %text-preset-5; */
-/**/
-/*         color: $color-neutral-700; */
-/*       } */
-/*     } */
-/**/
-/*     hr { */
-/*       width: 100%; */
-/*       border: 1px solid $color-neutral-200; */
-/*     } */
-/**/
-/*     &--list { */
-/*       @extend %flexbox-style; */
-/**/
-/*       flex-direction: column; */
-/*       align-items: baseline; */
-/*       gap: $spacing-16; */
-/*       margin-bottom: 0.8rem; */
-/*       list-style: none; */
-/**/
-/*       &-item { */
-/*         @extend %text-preset-5; */
-/**/
-/*         @extend %flexbox-style; */
-/**/
-/*         gap: $spacing-12; */
-/*         color: $color-neutral-700; */
-/*       } */
-/*     } */
-/**/
-/*     &--btn { */
-/*       width: 100%; */
-/*     } */
+/*     color: $color-neutral-700; */
 /*   } */
 /* } */
 /**/
 /* @include respond-to($breakpoint-small-mobiles) { */
-/*   .pricing { */
-/*     margin: 0 auto $spacing-64; */
+/*   .review { */
+/*     margin: $spacing-64 auto; */
 /*     padding: 0 $spacing-16; */
-/*     gap: $spacing-24; */
-/*     align-items: stretch; */
-/**/
-/*     &__options { */
-/*       grid-template-columns: 1fr; */
-/*       row-gap: $spacing-24; */
-/*     } */
-/**/
-/*     &__option { */
-/*       &--pro { */
-/*         padding: $spacing-24; */
-/*       } */
-/*     } */
-/**/
-/*     &__header { */
-/*       font-size: 3.4rem; */
-/*     } */
-/*   } */
-/* } */
-/**/
-/* @include respond-to($breakpoint-large-mobiles) { */
-/*   .pricing { */
-/*     margin: 0 auto $spacing-64; */
-/*     padding: 0 $spacing-24; */
-/*     gap: 4rem; */
-/*     align-items: stretch; */
-/**/
-/*     &__header { */
-/*       text-align: center; */
-/*     } */
-/**/
-/*     &__options { */
-/*       grid-template-columns: 0.75fr; */
-/*       gap: $spacing-24; */
-/*       justify-content: center; */
-/*     } */
-/**/
-/*     &__option { */
-/*       &--pro { */
-/*         padding: $spacing-24; */
-/*       } */
-/*     } */
-/*   } */
-/* } */
-/**/
-/* @include respond-to($breakpoint-tablets) { */
-/*   .pricing{ */
-/*     margin: 0 auto $spacing-80; */
-/*     padding: 0 $spacing-32; */
-/*     gap: 4rem; */
-/*     align-items: stretch; */
-/**/
-/*     &__options { */
-/*       grid-template-columns: repeat(2, 1fr); */
-/*       gap: $spacing-24; */
-/*       justify-content: center; */
-/*     } */
-/**/
-/*     &__option { */
-/*       &--starter, */
-/*       &--pro, */
-/*       &--enterprise { */
-/*         padding: $spacing-24; */
-/*       } */
-/**/
-/*       &:nth-child(2) { */
-/*         &::after { */
-/*           @include blur-effect(57%, -107%); */
-/*         } */
-/*       } */
-/*     } */
-/*   } */
-/* } */
-/* .review { */
-/*     @extend %flexbox-style; */
-/**/
-/*     max-width: 97rem; */
-/*     margin: 0 auto 12rem; */
-/*     flex-direction: column; */
-/*     gap: $spacing-32; */
+/*     align-items: baseline; */
 /**/
 /*     &__description { */
-/*         @extend %text-preset-3; */
-/**/
-/*         color: $color-neutral-900; */
-/*         text-align: center; */
+/*       text-align: left; */
+/*       font-size: 2.4rem; */
 /*     } */
-/**/
-/*     &__author { */
-/*         @extend %text-preset-5; */
-/**/
-/*         color: $color-neutral-700; */
-/*     } */
+/*   } */
 /* } */
-/**/
-/* @include respond-to($breakpoint-small-mobiles) { */
-/*     .review { */
-/*         margin: $spacing-64 auto; */
-/*         padding: 0 $spacing-16; */
-/*         align-items: baseline; */
-/**/
-/*         &__description { */
-/*             text-align: left; */
-/*             font-size: 2.4rem; */
-/*         } */
-/*     } */
-/* } */
-/**/
 /**/
 /* @include respond-to($breakpoint-large-mobiles) { */
-/*     .review { */
-/*         padding: 0 $spacing-32; */
-/*         align-items: baseline; */
+/*   .review { */
+/*     padding: 0 $spacing-32; */
+/*     align-items: baseline; */
 /**/
-/*         &__description { */
-/*             text-align: left; */
-/*             font-size: 3.2rem; */
-/*             line-height: 1.1; */
-/*         } */
+/*     &__description { */
+/*       text-align: left; */
+/*       font-size: 3.2rem; */
+/*       line-height: 1.1; */
 /*     } */
+/*   } */
 /* } */
-/**/
 /**/
 /* //* HACK tablets (768px ~ 1024px) */
 /* @include respond-to($breakpoint-tablets) { */
-/*     .review { */
-/*         padding: 0 $spacing-32; */
-/*         align-items: baseline; */
+/*   .review { */
+/*     padding: 0 $spacing-32; */
+/*     align-items: baseline; */
 /**/
-/*         &__description { */
-/*             text-align: left; */
-/*         } */
+/*     &__description { */
+/*       text-align: left; */
 /*     } */
+/*   } */
 /* } */
 /* .footer { */
 /*   max-width: 144rem; */
