Modify image url

--- a/styles/layout/_footer.scss
+++ b/styles/layout/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
   background-color: $color-neutral-900;
-  background-image: url("../../assets/images/pattern-dark-bg.svg");
+  background-image: url("../assets/images/pattern-dark-bg.svg");
   color: $color-neutral-100;
   text-align: center;
   border-top-left-radius: $border-radius-12;
