--- a/styles/layout/_hero.scss
+++ b/styles/layout/_hero.scss
@@ -2,7 +2,7 @@
   padding: $spacing-24 $spacing-16 $spacing-80;
   margin-bottom: $spacing-64;
   background-color: $color-neutral-100;
-  background-image: url("../../assets/images/pattern-light-bg.svg");
+  background-image: url("../assets/images/pattern-light-bg.svg");
   position: relative;
   z-index: 10;
   overflow: hidden;
