--- a/styles/layout/_journey.scss
+++ b/styles/layout/_journey.scss
@@ -19,7 +19,7 @@
   margin: 0 $spacing-16 $spacing-64;
   padding: $spacing-32 $spacing-16;
   background-color: $color-neutral-100;
-  background-image: url("../../assets/images/pattern-light-bg.svg");
+  background-image: url("../assets/images/pattern-light-bg.svg");
   border-radius: $border-radius-12;
   text-align: center;
   position: relative;
